create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1892,7 +1892,7 @@ body {
 .cid-qw3ddMUcA4 {
   padding-top: 15px;
   padding-bottom: 0px;
-  background-image: url("../../../assets/images/background6161.jpg");
+  background-image: url("../../../assets/images/background64.jpg");
 }
 .cid-qw3ddMUcA4 h4 {
   font-weight: 500;
@@ -1939,8 +1939,8 @@ body {
   background-image: url("../../../assets/images/jumbotron.jpg");
 }
 .cid-qw3gsIFwou {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/01.jpg");
 }
 .cid-qw3gsIFwou .title {
@@ -1972,8 +1972,8 @@ body {
   color: #ffffff;
 }
 .cid-qw3fkVsYRl {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
@@ -2432,7 +2432,7 @@ body {
 }
 .cid-qvYUSbgXq1 {
   padding-top: 45px;
-  padding-bottom: 60px;
+  padding-bottom: 45px;
   background: linear-gradient(45deg, #ff3366, #0f7699);
 }
 @media (min-width: 992px) {
@@ -2447,7 +2447,7 @@ body {
 }
 .cid-qvYYCL5Qgu {
   padding-top: 45px;
-  padding-bottom: 60px;
+  padding-bottom: 45px;
   background-image: url("../../../assets/images/background5.jpg");
 }
 @media (min-width: 992px) {
@@ -2461,8 +2461,8 @@ body {
   }
 }
 .cid-qvYZtznQEv {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(45deg, #cccccc, #cc2952);
 }
 @media (min-width: 992px) {
@@ -2476,8 +2476,8 @@ body {
   }
 }
 .cid-qvZ2ItdyhC {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background2.jpg");
 }
 .cid-qvZ2ItdyhC .card-img a {
@@ -2521,7 +2521,7 @@ body {
 }
 .cid-qw2qtnHakS {
   padding-top: 45px;
-  padding-bottom: 60px;
+  padding-bottom: 45px;
   background-image: url("../../../assets/images/background5.jpg");
 }
 @media (min-width: 992px) {
@@ -2536,7 +2536,7 @@ body {
 }
 .cid-qw2AgsWUj1 {
   padding-top: 45px;
-  padding-bottom: 60px;
+  padding-bottom: 45px;
 }
 @media (min-width: 992px) {
   .cid-qw2AgsWUj1 .mbr-figure {
@@ -2549,8 +2549,8 @@ body {
   }
 }
 .cid-qw2JMg2OP5 {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(45deg, #149dcc, #ff3366);
 }
 @media (min-width: 992px) {
@@ -2565,7 +2565,7 @@ body {
 }
 .cid-qw2KwVVxuO {
   padding-top: 45px;
-  padding-bottom: 60px;
+  padding-bottom: 45px;
 }
 @media (min-width: 992px) {
   .cid-qw2KwVVxuO .mbr-figure {
@@ -2578,8 +2578,8 @@ body {
   }
 }
 .cid-qw2L7vZHQp {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background5.jpg");
 }
 @media (min-width: 992px) {
@@ -2593,8 +2593,8 @@ body {
   }
 }
 .cid-qw2LAZFcb2 {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(45deg, #f7ed4a, #7f1933);
 }
 @media (min-width: 992px) {
@@ -2608,9 +2608,9 @@ body {
   }
 }
 .cid-qw31SjZoKA {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/background2162.jpg");
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/background25.jpg");
 }
 .cid-qw31SjZoKA .card-img a {
   display: block;
@@ -2652,8 +2652,8 @@ body {
   transition: box-shadow 0.3s;
 }
 .cid-qw2M7ktTnY {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 @media (min-width: 992px) {
   .cid-qw2M7ktTnY .mbr-figure {
@@ -2666,8 +2666,8 @@ body {
   }
 }
 .cid-qw2MOwmeSB {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background5.jpg");
 }
 @media (min-width: 992px) {
@@ -2681,8 +2681,8 @@ body {
   }
 }
 .cid-qw2NHvurNd {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(45deg, #0f7699, #787324);
 }
 @media (min-width: 992px) {
@@ -2696,8 +2696,8 @@ body {
   }
 }
 .cid-qw2O2zfo6H {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 @media (min-width: 992px) {
   .cid-qw2O2zfo6H .mbr-figure {
@@ -2710,8 +2710,8 @@ body {
   }
 }
 .cid-qw2OLWbcPh {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background3.jpg");
 }
 @media (min-width: 992px) {
@@ -2725,9 +2725,9 @@ body {
   }
 }
 .cid-qw337xUeD4 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/01.jpg");
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-image: url("../../../assets/images/016.jpg");
 }
 .cid-qw337xUeD4 .mbr-section-subtitle {
   color: #ffffff;
@@ -2825,8 +2825,8 @@ body {
   color: #ffffff;
 }
 .cid-qw33BmJpyh {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/jumbotron.jpg");
 }
 .cid-qw33BmJpyh .title {
@@ -2858,8 +2858,8 @@ body {
   color: #ffffff;
 }
 .cid-qw35cBRaY6 {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
@@ -3314,11 +3314,11 @@ body {
 .cid-qw3NYxOzgO {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/background5163.jpg");
+  background-image: url("../../../assets/images/background57.jpg");
 }
 .cid-qvYUSbgXq1 {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(45deg, #ff3366, #0f7699);
 }
 @media (min-width: 992px) {
@@ -3332,8 +3332,8 @@ body {
   }
 }
 .cid-qvYYCL5Qgu {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background5.jpg");
 }
 @media (min-width: 992px) {
@@ -3347,9 +3347,9 @@ body {
   }
 }
 .cid-qvYZtznQEv {
-  padding-top: 45px;
-  padding-bottom: 60px;
-  background: linear-gradient(45deg, #cccccc, #cc2952);
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: linear-gradient(45deg, #073b4c, #7bcc29);
 }
 @media (min-width: 992px) {
   .cid-qvYZtznQEv .mbr-figure {
@@ -3362,8 +3362,8 @@ body {
   }
 }
 .cid-qvZ2ItdyhC {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background2.jpg");
 }
 .cid-qvZ2ItdyhC .card-img a {
@@ -3406,8 +3406,8 @@ body {
   transition: box-shadow 0.3s;
 }
 .cid-qw2qtnHakS {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background5.jpg");
 }
 @media (min-width: 992px) {
@@ -3421,9 +3421,9 @@ body {
   }
 }
 .cid-qw31SjZoKA {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/background2162.jpg");
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/background25.jpg");
 }
 .cid-qw31SjZoKA .card-img a {
   display: block;
@@ -3465,9 +3465,9 @@ body {
   transition: box-shadow 0.3s;
 }
 .cid-qw337xUeD4 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/01.jpg");
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/016.jpg");
 }
 .cid-qw337xUeD4 .mbr-section-subtitle {
   color: #ffffff;
@@ -3565,8 +3565,8 @@ body {
   color: #ffffff;
 }
 .cid-qw33BmJpyh {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background3.jpg");
 }
 .cid-qw33BmJpyh .title {
@@ -3598,8 +3598,8 @@ body {
   color: #ffffff;
 }
 .cid-qw35cBRaY6 {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
@@ -4054,11 +4054,11 @@ body {
 .cid-qw3NYxOzgO {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/background5163.jpg");
+  background-image: url("../../../assets/images/background57.jpg");
 }
 .cid-qvYUSbgXq1 {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(45deg, #ff3366, #0f7699);
 }
 @media (min-width: 992px) {
@@ -4072,8 +4072,8 @@ body {
   }
 }
 .cid-qvYYCL5Qgu {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background5.jpg");
 }
 @media (min-width: 992px) {
@@ -4087,8 +4087,8 @@ body {
   }
 }
 .cid-qvYZtznQEv {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(45deg, #c4bc3b, #073b4c);
 }
 @media (min-width: 992px) {
@@ -4102,8 +4102,8 @@ body {
   }
 }
 .cid-qvZ2ItdyhC {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background2.jpg");
 }
 .cid-qvZ2ItdyhC .card-img a {
@@ -4146,9 +4146,9 @@ body {
   transition: box-shadow 0.3s;
 }
 .cid-qw2qtnHakS {
-  padding-top: 45px;
-  padding-bottom: 60px;
-  background-image: url("../../../assets/images/background6.jpg");
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-image: url("../../../assets/images/background3.jpg");
 }
 @media (min-width: 992px) {
   .cid-qw2qtnHakS .mbr-figure {
@@ -4161,8 +4161,8 @@ body {
   }
 }
 .cid-qw4blW0Jxl {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 @media (min-width: 992px) {
   .cid-qw4blW0Jxl .mbr-figure {
@@ -4175,8 +4175,8 @@ body {
   }
 }
 .cid-qw4bSq2Mwj {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(45deg, #ff3366, #0f7699);
 }
 @media (min-width: 992px) {
@@ -4190,9 +4190,9 @@ body {
   }
 }
 .cid-qw31SjZoKA {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/background2162.jpg");
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/background25.jpg");
 }
 .cid-qw31SjZoKA .card-img a {
   display: block;
@@ -4234,8 +4234,8 @@ body {
   transition: box-shadow 0.3s;
 }
 .cid-qw4czrUEtz {
-  padding-top: 45px;
-  padding-bottom: 0px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background5.jpg");
 }
 @media (min-width: 992px) {
@@ -4249,8 +4249,8 @@ body {
   }
 }
 .cid-qw4dL5yRX6 {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(45deg, #0f7699, #787324);
 }
 @media (min-width: 992px) {
@@ -4264,8 +4264,8 @@ body {
   }
 }
 .cid-qw4edi2mXA {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 @media (min-width: 992px) {
   .cid-qw4edi2mXA .mbr-figure {
@@ -4278,8 +4278,8 @@ body {
   }
 }
 .cid-qw4eCCvmCD {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background: linear-gradient(45deg, #ff3366, #787324);
 }
 @media (min-width: 992px) {
@@ -4293,8 +4293,8 @@ body {
   }
 }
 .cid-qw4f3lWcvb {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-image: url("../../../assets/images/background5.jpg");
 }
 @media (min-width: 992px) {
@@ -4338,8 +4338,8 @@ body {
   }
 }
 .cid-qw4hQCk5k6 {
-  padding-top: 45px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 @media (min-width: 992px) {
   .cid-qw4hQCk5k6 .mbr-figure {
@@ -4455,9 +4455,9 @@ body {
   }
 }
 .cid-qw337xUeD4 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/01.jpg");
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/016.jpg");
 }
 .cid-qw337xUeD4 .mbr-section-subtitle {
   color: #ffffff;
